Upload inference code in README.md

--- a/inference_example.ipynb
+++ b/inference_example.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "test_image = os.path.join(\"./examples/img_01.png\")\n",
+    "test_image = \"./examples/img_01.png\"\n",
     "image_pil = Image.open(test_image)\n",
     "image = transform(image_pil).unsqueeze(0).to(device)\n",
     "\n",
